--- a/bridge-core/Cargo.toml
+++ b/bridge-core/Cargo.toml
@@ -8,4 +8,5 @@ tokio = {  workspace = true }
 async-trait = { workspace = true }
 log = { workspace = true }
 parity-scale-codec = { workspace = true, features = ["derive"] }
+alloy = { workspace = true, features = ["rpc", "rpc-types", "dyn-abi", "contract"] }
 
