--- a/ethereum/cli/Cargo.toml
+++ b/ethereum/cli/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
-clap = {workspace = true}
+clap = { workspace = true, features = ["derive"] }
 alloy = { workspace = true, features = ["contract", "signer-local"]}
-log = "0.4.22"
+log = { workspace = true }
