--- a/substrate/cli/Cargo.toml
+++ b/substrate/cli/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
-clap = {workspace = true}
+clap = { workspace = true, features = ["derive"] }
 subxt = "0.37.0"
-subxt-signer = { version = "0.37.0", features = ["subxt"]}
+subxt-signer = { version = "0.37.0", features = ["subxt"] }
 log = { workspace = true }
 hex = "0.4"
