--- a/bridge-core/Cargo.toml
+++ b/bridge-core/Cargo.toml
@@ -8,3 +8,5 @@ tokio = {  workspace = true }
 async-trait = { workspace = true }
 log = { workspace = true }
 parity-scale-codec = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+serde = { version = "1.0.217", features = ["derive"] }
