--- a/bridge-worker/Cargo.toml
+++ b/bridge-worker/Cargo.toml
@@ -12,3 +12,6 @@ ethereum-relayer = { path = "../ethereum/relayer" }
 substrate-listener = { path = "../substrate/listener" }
 substrate-relayer = { path = "../substrate/relayer" }
 hex = "0.4.3"
+serde_json = { workspace = true }
+serde = { version = "1.0.217", features = ["derive"] }
+bridge-core = { path = "../bridge-core" }
