--- a/ethereum/listener/Cargo.toml
+++ b/ethereum/listener/Cargo.toml
@@ -10,6 +10,7 @@ bridge-core = { path = "../../bridge-core" }
 async-trait = { workspace = true }
 parity-scale-codec = { workspace = true, features = ["derive"] }
 alloy = { workspace = true, features = ["rpc", "rpc-types", "dyn-abi", "contract"] }
+serde = { version = "1.0.217", features = ["derive"] }
 
 [dev-dependencies]
 env_logger = {  workspace = true }
