--- a/ethereum/relayer/Cargo.toml
+++ b/ethereum/relayer/Cargo.toml
@@ -8,3 +8,4 @@ bridge-core = { path = "../../bridge-core" }
 async-trait = { workspace = true }
 alloy = { workspace = true, features = ["contract", "signer-local"]}
 log = { workspace = true }
+serde = { version = "1.0.217", features = ["derive"] }
