--- a/substrate/listener/Cargo.toml
+++ b/substrate/listener/Cargo.toml
@@ -11,6 +11,7 @@ parity-scale-codec = { workspace = true, features = ["derive"] }
 subxt = "0.37.0"
 scale-encode = "0.7.1"
 tokio = {  workspace = true, features = ["macros", "rt-multi-thread"] }
+serde = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 env_logger = { workspace = true }
