--- a/artifacts/bridge_config.json
+++ b/artifacts/bridge_config.json
@@ -27,15 +27,15 @@
       "relayer_type": "ethereum",
       "id": "sepolia",
       "config": {
-          "rpc_url": "http://ethereum-node:8545",
-          "bridge_address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+          "node_rpc_url": "http://ethereum-node:8545",
+          "bridge_contract_address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
       }
     },
     {
       "relayer_type": "substrate",
       "id": "rococo",
       "config": {
-        "node_rpc_url": "ws://litentry-node:9944"
+        "ws_rpc_endpoint": "ws://litentry-node:9944"
       }
     }
   ]
