Integrate relayer with omni-bridge (#6)
* integrate with omni-bridge pallet

* fix compile error; update hei

---------

Co-authored-by: Kasper Ziemianek <kasper.ziemianek@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,7 @@
 [submodule "ethereum/chainbridge-contracts/lib/openzeppelin-contracts"]
 	path = ethereum/chainbridge-contracts/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+	branch = release-v4.5
 [submodule "ethereum/chainbridge-contracts/lib/forge-std"]
 	path = ethereum/chainbridge-contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
