--- a/ethereum/cli/Cargo.toml
+++ b/ethereum/cli/Cargo.toml
@@ -8,3 +8,4 @@ clap = { workspace = true, features = ["derive"] }
 alloy = { workspace = true, features = ["contract", "signer-local"]}
 log = { workspace = true }
 subxt-core = "0.38.0"
+serde_json = "1.0.134"
