Relayer keystore import and CLI (#5)
* init

* init

* Add import and cli

* remove unneeded file

* fix compile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,17 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 0
+
+      - name: Install foundry
+        uses: foundry-rs/foundry-toolchain@v1
+
+      - name: Install toolchain
+        run: rustup show
+
+      - name: Build
+        run: |
+          make build-evm-contracts
+          make build-docker
