--- a/substrate/cli/Cargo.toml
+++ b/substrate/cli/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
-clap = { workspace = true, features = ["derive"] }
-subxt = "0.37.0"
-subxt-signer = { version = "0.37.0", features = ["subxt"] }
+clap = { workspace = true }
+subxt = { workspace = true }
+subxt-signer = { workspace = true }
 log = { workspace = true }
 hex = { workspace = true }
