--- a/bridge-core/Cargo.toml
+++ b/bridge-core/Cargo.toml
@@ -7,12 +7,12 @@ edition.workspace = true
 tokio = {  workspace = true }
 async-trait = { workspace = true }
 log = { workspace = true }
-parity-scale-codec = { workspace = true, features = ["derive"] }
+parity-scale-codec = { workspace = true }
 serde_json = { workspace = true }
-serde = { version = "1.0.217", features = ["derive"] }
+serde = { workspace = true }
 
 [dev-dependencies]
-ethereum-listener = { path = "../ethereum/listener" }
-ethereum-relayer = { path = "../ethereum/relayer" }
-substrate-listener = { path = "../substrate/listener" }
-substrate-relayer = { path = "../substrate/relayer" }
+ethereum-listener = { workspace = true }
+ethereum-relayer = { workspace = true }
+substrate-listener = { workspace = true }
+substrate-relayer = { workspace = true }
