--- a/bridge-worker/Cargo.toml
+++ b/bridge-worker/Cargo.toml
@@ -4,13 +4,31 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = {  workspace = true, features = ["macros", "rt-multi-thread"] }
+tokio = {  workspace = true }
+clap = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
-ethereum-listener = { path = "../ethereum/listener" }
-ethereum-relayer = { path = "../ethereum/relayer" }
-substrate-listener = { path = "../substrate/listener" }
-substrate-relayer = { path = "../substrate/relayer" }
+hex = { workspace = true }
 serde_json = { workspace = true }
-serde = { version = "1.0.217", features = ["derive"] }
-bridge-core = { path = "../bridge-core" }
+serde = { workspace = true }
+serde_with = { workspace = true }
+rsa = { workspace = true }
+rand = { workspace = true }
+thiserror = { workspace = true }
+sp-core = { workspace = true }
+sha2 = { workspace = true }
+jsonrpsee = { workspace = true }
+jsonrpsee-types = { workspace = true }
+
+bridge-core = { workspace = true }
+ethereum-listener = { workspace = true }
+ethereum-relayer = { workspace = true }
+substrate-listener = { workspace = true }
+substrate-relayer = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
+reqwest = { workspace = true }
+once_cell = { workspace = true }
+jsonrpsee-core = { workspace = true }
+hex-literal = { workspace = true }
