--- a/ethereum/cli/Cargo.toml
+++ b/ethereum/cli/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition.workspace = true
 
 [dependencies]
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true }
 alloy = { workspace = true, features = ["contract", "signer-local"]}
 log = { workspace = true }
-subxt-core = "0.38.0"
-serde_json = "1.0.134"
+subxt-core = { workspace = true }
+serde_json = { workspace = true }
