--- a/ethereum/listener/Cargo.toml
+++ b/ethereum/listener/Cargo.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = {  workspace = true, features = ["macros", "rt-multi-thread"] }
+tokio = {  workspace = true }
 log = { workspace = true }
-bridge-core = { path = "../../bridge-core" }
 async-trait = { workspace = true }
-parity-scale-codec = { workspace = true, features = ["derive"] }
+parity-scale-codec = { workspace = true }
 alloy = { workspace = true, features = ["rpc", "rpc-types", "dyn-abi", "contract"] }
 serde = { version = "1.0.217", features = ["derive"] }
+
+bridge-core = { workspace = true }
 
 [dev-dependencies]
 env_logger = {  workspace = true }
