--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,36 @@
 services: 
-  tee-bridge:
+  omni-bridge:
     image: bridge:latest
-    command: "./artifacts/bridge_config.json"
     environment:
       - RUST_LOG=debug
     depends_on:
       - ethereum-node
-      - litentry-node
+      - heima-node
     volumes:
       - ./artifacts/:/artifacts
+
   ethereum-node:
     image: ghcr.io/foundry-rs/foundry
     command:
       - "anvil --host 0.0.0.0 --block-time 1"
     ports:
       - "8545:8545"
-  litentry-node:
-    image: litentry/litentry-parachain:bridge.da5ab6b
+
+  heima-node:
+    image: litentry/litentry-parachain:latest
     ports:
       - "9944:9944"
     command: ["--dev", "--rpc-external"]
+
   bridge-contract-deployer:
     image: ghcr.io/foundry-rs/foundry
-    command:
+    command: |
       - "cd /contracts && forge build && forge create Bridge --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0 [] 0 0 0 && forge create ERC20Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create GenericHandler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create ERC721Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3"
     volumes:
       - ./ethereum/chainbridge-contracts:/contracts
     depends_on:
       - ethereum-node
+
   lit-erc20-contract-deployer:
     image: ghcr.io/foundry-rs/foundry
     command:
@@ -37,15 +40,17 @@ services:
     depends_on:
       bridge-contract-deployer:
         condition: service_completed_successfully
+
   hei-erc20-contract-deployer:
     image: ghcr.io/foundry-rs/foundry
     command:
-      - "cd HEI-token && forge create --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 HEI HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+      - "cd HEI-token && forge create --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 Heima HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
     volumes:
       - ./artifacts/ethereum/HEI-token:/HEI-token
     depends_on:
       lit-erc20-contract-deployer:
         condition: service_completed_successfully
+
   api:
     image: web3labs/epirus-free-api:latest
     environment:
@@ -97,8 +102,8 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./5xx.html:/www/error_pages/5xx.html
+      - ./local/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./local/nginx/5xx.html:/www/error_pages/5xx.html
     ports:
       - ${PORT:-80}:80
     depends_on:
