Gramine docker image (#9)
* gramine config & docker file

* Gramine configuration and Dockerfile

* remove old Dockerfile

* remove keystore from gramine docker image

* its content should be created during runtime and be encrypted

* cli/docker/gramine adjustments

* gitignore

* README.md

* fix tests compilation

* move start block from config to cli args

* install ca-certificates inside Docker images

* log error

* gramine & docker fixes

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,6 +6,8 @@ RUN cargo build --release -p bridge-worker
 FROM ubuntu:22.04
 WORKDIR /opt/omni-bridge
 
+RUN apt update && apt install -y ca-certificates
+
 COPY --from=builder /usr/src/omni-bridge/target/release/bridge-worker ./bridge-worker
 COPY --from=builder /usr/src/omni-bridge/local/config.json ./config.json
 COPY --from=builder /usr/src/omni-bridge/local/keystore ./keystore
