--- a/local/config.json
+++ b/local/config.json
@@ -6,8 +6,7 @@
       "relayers": ["rococo"],
       "config": {
         "node_rpc_url": "http://ethereum-node:8545",
-        "bridge_contract_address": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
-        "start_block": 0
+        "bridge_contract_address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
       }
     },
     {
@@ -15,8 +14,7 @@
       "id": "rococo",
       "relayers": ["sepolia"],
       "config": {
-        "ws_rpc_endpoint": "ws://heima-node:9944",
-        "start_block": 0
+        "ws_rpc_endpoint": "ws://heima-node:9944"
       }
     }
   ],
