--- a/omni-bridge.manifest.template
+++ b/omni-bridge.manifest.template
@@ -18,7 +18,12 @@ loader.env.RUST_BACKTRACE = "full"
 fs.mounts = [
   { path = "/lib", uri = "file:{{ gramine.runtimedir() }}" },
   { path = "{{ arch_libdir }}", uri = "file:{{ arch_libdir }}" },
-  { path = "/data", uri = "file:data", type="encrypted", key_name="_sgx_mrsigner" },
+  { path = "/etc", uri = "file:/etc" },
+  { path = "/usr", uri = "file:/usr" },
+  { path = "/config.json", uri = "file:config.json" },
+  { path = "/keystore", uri = "file:keystore", type="encrypted", key_name="{{'_sgx_mrsigner' if env.get('SGX', '0') == '1' else 'fake_sgx_mrsigner'}}" },
+  { path = "/data", uri = "file:data", type="encrypted", key_name="{{'_sgx_mrsigner' if env.get('SGX', '0') == '1' else 'fake_sgx_mrsigner'}}" },
+  { path = "/auth_key_pub.bin", uri = "file:auth_key_pub.bin" },
 ]
 
 sgx.debug = true
@@ -33,6 +38,10 @@ sgx.trusted_files = [
   "file:{{ self_exe }}",
   "file:{{ gramine.runtimedir() }}/",
   "file:{{ arch_libdir }}/",
+  "file:/etc/ssl/certs/ca-certificates.crt",
+  "file:/usr/lib/ssl/certs/ca-certificates.crt",
+  "file:config.json",
+  "file:auth_key_pub.bin",
 ]
 
 # The maximum number of threads in a single process needs to be declared in advance.
@@ -43,3 +52,10 @@ sgx.trusted_files = [
 # - helper threads internal to Gramine — see:
 #   https://gramine.readthedocs.io/en/stable/manifest-syntax.html#number-of-threads
 sgx.max_threads = {{ '1' if env.get('EDMM', '0') == '1' else '64' }}
+
+# this is highly insecure - we should use loader.argv_src_file instead and get file from trusted source
+loader.insecure__use_cmdline_argv = true
+loader.env.RUST_LOG = { passthrough = true }
+
+# This key is a workaround because gramine-direct doesn't provide _sgx_mrsigner key
+{{'' if env.get('SGX', '0') == '1' else 'fs.insecure__keys.fake_sgx_mrsigner = "ffeeddccbbaa99887766554433221100"'}}
