--- a/ethereum/relayer/Cargo.toml
+++ b/ethereum/relayer/Cargo.toml
@@ -9,3 +9,6 @@ async-trait = { workspace = true }
 bridge-core = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
+
+[dev-dependencies]
+tokio = { workspace = true, features = ["test-util"]}
