--- a/ethereum/listener/Cargo.toml
+++ b/ethereum/listener/Cargo.toml
@@ -15,3 +15,5 @@ bridge-core = { workspace = true }
 
 [dev-dependencies]
 env_logger = { workspace = true }
+futures = { workspace = true }
+mockall = { workspace = true }
