--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ jsonrpsee-types = "0.24"
 jsonrpsee = { version = "0.24", features = ["server"] }
 once_cell = "1.20"
 reqwest = "0.12"
+mockall = "0.13.1"
+futures = "0.3.31"
 
 bridge-core = { path = "bridge-core" }
 bridge-cli = { path = "bridge-cli" }
