--- a/local/config.json
+++ b/local/config.json
@@ -6,7 +6,8 @@
       "relayers": ["rococo"],
       "config": {
         "node_rpc_url": "http://ethereum-node:8545",
-        "bridge_contract_address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+        "bridge_contract_address": "0x5FbDB2315678afecb367f032d93F642f64180aa3",
+        "finalization_gap": 6
       }
     },
     {
