--- a/local/config.json
+++ b/local/config.json
@@ -15,7 +15,8 @@
       "id": "rococo",
       "relayers": ["sepolia"],
       "config": {
-        "ws_rpc_endpoint": "ws://heima-node:9944"
+        "ws_rpc_endpoint": "ws://heima-node:9944",
+        "chain": "local"
       }
     }
   ],
@@ -32,7 +33,8 @@
       "relayer_type": "substrate",
       "id": "rococo",
       "config": {
-        "ws_rpc_endpoint": "ws://heima-node:9944"
+        "ws_rpc_endpoint": "ws://heima-node:9944",
+        "chain": "local"
       }
     }
   ]
