P 1276 add test for repeated listeningrelaying (#22)
* fix: add test for repeated block scanning

* fix: typo in ci file

* fix: warnings

* refactor: typo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,3 +63,7 @@ jobs:
       - name: Run e2e test
         run: |
           make start-local-e2e-test
+      
+      - name: Test repeated block scannning 
+        run: | 
+          make test-repeated-block-scanning
