--- a/ethereum/relayer/Cargo.toml
+++ b/ethereum/relayer/Cargo.toml
@@ -9,8 +9,8 @@ async-trait = { workspace = true }
 bridge-core = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
+metrics = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util"] }
 mockall = { workspace = true }
-futures = { workspace = true }
