--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
     ports:
       - "8545:8545"
 
+  ethereum-2-node:
+    image: ghcr.io/foundry-rs/foundry
+    command:
+      - "anvil --host 0.0.0.0 --block-time 1"
+    ports:
+      - "8546:8545"
+
   heima-node:
     image: litentry/litentry-parachain:latest
     ports:
@@ -33,6 +40,15 @@ services:
     depends_on:
       - ethereum-node
 
+  bridge-contract-2-deployer:
+    image: ghcr.io/foundry-rs/foundry
+    command: |
+      - "cd /contracts && forge build && forge create Bridge --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0 [] 0 0 0 && forge create ERC20Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create GenericHandler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create ERC721Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3"
+    volumes:
+      - ./ethereum/chainbridge-contracts:/contracts
+    depends_on:
+      - ethereum-2-node
+
   lit-erc20-contract-deployer:
     image: ghcr.io/foundry-rs/foundry
     command:
@@ -43,6 +59,16 @@ services:
       bridge-contract-deployer:
         condition: service_completed_successfully
 
+  lit-erc20-2-contract-deployer:
+    image: ghcr.io/foundry-rs/foundry
+    command:
+      - "forge create contracts/ERC20.sol:LITToken --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545"
+    volumes:
+      - ./artifacts/ethereum:/contracts
+    depends_on:
+      bridge-contract-2-deployer:
+        condition: service_completed_successfully
+
   hei-erc20-contract-deployer:
     image: ghcr.io/foundry-rs/foundry
     command:
@@ -51,6 +77,16 @@ services:
       - ./artifacts/ethereum/HEI-token:/HEI-token
     depends_on:
       lit-erc20-contract-deployer:
+        condition: service_completed_successfully
+
+  hei-erc20-2-contract-deployer:
+    image: ghcr.io/foundry-rs/foundry
+    command:
+      - "cd HEI-token && forge create --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 Heima HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+    volumes:
+      - ./artifacts/ethereum/HEI-token:/HEI-token
+    depends_on:
+      lit-erc20-2-contract-deployer:
         condition: service_completed_successfully
 
   api:
