--- a/ethereum/listener/Cargo.toml
+++ b/ethereum/listener/Cargo.toml
@@ -10,10 +10,9 @@ log = { workspace = true }
 parity-scale-codec = { workspace = true }
 serde = { version = "1.0.217", features = ["derive"] }
 tokio = { workspace = true }
-
 bridge-core = { workspace = true }
+hex = { workspace = true }
 
 [dev-dependencies]
-env_logger = { workspace = true }
 futures = { workspace = true }
 mockall = { workspace = true }
