--- a/substrate/relayer/Cargo.toml
+++ b/substrate/relayer/Cargo.toml
@@ -10,3 +10,9 @@ log = { workspace = true }
 serde = { workspace = true }
 subxt = { workspace = true }
 subxt-signer = { workspace = true }
+tokio = { workspace = true, features = ["sync"] }
+
+[dev-dependencies]
+serde_json = { workspace = true }
+tempfile = { workspace = true }
+scale-encode = { workspace = true}
