--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,12 @@ jobs:
           cd -
           make build-docker-dev
 
+
+      - name: Setup permissions
+        run: |
+          sudo chmod -R a+rw ethereum/chainbridge-contracts 
+          sudo chmod -R a+rw artifacts
+
       - name: Setup the network
         run: |
           docker compose up -d --remove-orphans
@@ -67,3 +73,21 @@ jobs:
       - name: Test repeated block scannning 
         run: | 
           make test-repeated-block-scanning
+
+
+      - name: Collect docker logs if test fails
+        continue-on-error: true
+        uses: jwalton/gh-docker-logs@v2
+        if: failure()
+        with:
+          tail: all
+          dest: docker-logs
+
+      - name: Upload docker logs if test fails
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: build-check-docker-logs
+          path: docker-logs
+          if-no-files-found: ignore
+          retention-days: 3
