--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,14 @@ services:
       - "9090:9090"
 
   ethereum-node:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command:
       - "anvil --host 0.0.0.0 --block-time 1"
     ports:
       - "8545:8545"
 
   ethereum-2-node:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command:
       - "anvil --host 0.0.0.0 --block-time 1"
     ports:
@@ -32,59 +32,59 @@ services:
     command: ["--dev", "--rpc-external"]
 
   bridge-contract-deployer:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command: |
-      - "cd /contracts && forge build && forge create Bridge --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0 [] 0 0 0 && forge create ERC20Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create GenericHandler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create ERC721Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3"
+      - "forge create --root /app --no-cache Bridge --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0 [] 0 0 0 && forge create --root /app ERC20Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create --root /app GenericHandler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create --root /app ERC721Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3"
     volumes:
-      - ./ethereum/chainbridge-contracts:/contracts
+      - ./ethereum/chainbridge-contracts:/app
     depends_on:
       - ethereum-node
 
   bridge-contract-2-deployer:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command: |
-      - "cd /contracts && forge build && forge create Bridge --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0 [] 0 0 0 && forge create ERC20Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create GenericHandler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create ERC721Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3"
+      - "forge create --root /app --no-cache Bridge --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0 [] 0 0 0 && forge create --root /app ERC20Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create --root /app GenericHandler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3 && forge create --root /app ERC721Handler --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0x5FbDB2315678afecb367f032d93F642f64180aa3"
     volumes:
-      - ./ethereum/chainbridge-contracts:/contracts
+      - ./ethereum/chainbridge-contracts:/app
     depends_on:
       - ethereum-2-node
 
   lit-erc20-contract-deployer:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command:
-      - "forge create contracts/ERC20.sol:LITToken --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545"
+      - "forge create --root /app ERC20.sol:LITToken --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545"
     volumes:
-      - ./artifacts/ethereum:/contracts
+      - ./artifacts/ethereum:/app
     depends_on:
       bridge-contract-deployer:
         condition: service_completed_successfully
 
   lit-erc20-2-contract-deployer:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command:
-      - "forge create contracts/ERC20.sol:LITToken --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545"
+      - "forge create --root /app ERC20.sol:LITToken --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545"
     volumes:
-      - ./artifacts/ethereum:/contracts
+      - ./artifacts/ethereum:/app
     depends_on:
       bridge-contract-2-deployer:
         condition: service_completed_successfully
 
   hei-erc20-contract-deployer:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command:
-      - "cd HEI-token && forge create --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 Heima HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+      - "forge create --root /app --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 Heima HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
     volumes:
-      - ./artifacts/ethereum/HEI-token:/HEI-token
+      - ./artifacts/ethereum/HEI-token:/app
     depends_on:
       lit-erc20-contract-deployer:
         condition: service_completed_successfully
 
   hei-erc20-2-contract-deployer:
-    image: ghcr.io/foundry-rs/foundry
+    image: ghcr.io/foundry-rs/foundry:v1.0.0
     command:
-      - "cd HEI-token && forge create --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 Heima HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
+      - "forge create --root /app --hardhat contracts/heima/HEI.sol:HEI --broadcast --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --rpc-url http://ethereum-2-node:8545 --constructor-args 0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9 Heima HEI 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
     volumes:
-      - ./artifacts/ethereum/HEI-token:/HEI-token
+      - ./artifacts/ethereum/HEI-token:/app
     depends_on:
       lit-erc20-2-contract-deployer:
         condition: service_completed_successfully
