--- a/bridge-cli/Cargo.toml
+++ b/bridge-cli/Cargo.toml
@@ -9,3 +9,5 @@ env_logger = { workspace = true }
 ethereum-cli = { workspace = true }
 substrate-cli = { workspace = true }
 tokio = { workspace = true }
+bridge-core = { workspace = true }
+serde_json = { workspace = true }
