--- a/bridge-core/Cargo.toml
+++ b/bridge-core/Cargo.toml
@@ -11,6 +11,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
 metrics = { workspace = true }
+itertools = { workspace = true }
+thiserror = { workspace = true }
 
 [dev-dependencies]
 ethereum-listener = { workspace = true }
