get new metadata (#45)
* get new metadata

* compilation fix

* update parachain image

--- a/docker/chains.yml
+++ b/docker/chains.yml
@@ -14,7 +14,7 @@ services:
       - "8546:8545"
 
   heima-node:
-    image: litentry/litentry-parachain:latest
+    image: litentry/heima:latest
     ports:
       - "9944:9944"
     command: ["--dev", "--rpc-external"]
